tests/cases/compiler-development/artifact/errors/diagnostic-generic-aggregate-enum-payload-mismatch.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected Token, got LexError" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-aggregate-enum-payload-mismatch.ari" display="tests/cases/generics/errors/generic-aggregate-enum-payload-mismatch.ari" bytes=319
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-aggregate-enum-payload-mismatch.ari" line=16 column=29 end_line=16 end_column=37 byte_start=208 byte_end=216 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-aggregate-enum-payload-mismatch.ari:16:29\n    |\n 16 |     Passed<Token, LexError>(LexError { code: 1 });\n    |                             ^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-aggregate-enum-payload-mismatch.ari" line=3 column=10 end_line=3 end_column=11 byte_start=46 byte_end=47 message="payload 1 for enum case 'Passed' expects Token"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-aggregate-enum-payload-mismatch.ari:3:10\n   |\n 3 |   Passed(T),\n   |          ^"
  Note index=0 location=none message="enum constructor payload types are checked against the case declaration after generic substitution"
  Help index=0 location=none message="pass a value of type Token for payload 1"
